  * Automatically populate sample JDBC values based on database type on the
    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Run the spam filter against edit comments as well as topic content to
    thwart spam attempts.
  * Allow parameters to be used when topics not in the template namespace are
    are utilized as templates.  Example: "{{myTopic|arg1=test1|arg2=test2}}".
  * Remove ability to automatically upgrade from versions prior to 0.7.0.
  * Move the database code into the jamwiki-core project.
  * All unit tests now use HSQL as a test database, rather than the dummy
    TestDataHandler.
  * Delete the webtest module, reducing the source code size by 12MB.
  * Upgrade to Spring Framework 3.0.1.RELEASE.
  * Upgrade to Spring Security 3.0.2.RELEASE.
  * Upgrade to Lucene Search 3.0.1.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.
  * Upgrade to HSQLDB 1.8.0.10.

Bugfixes:

  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".
  * Special:Import and Special:Export code refactored to avoid OOM errors with
    topics that have extensive history.
  * Properly parse template parameters that are themselves templates, such as
    "{{{{{template_name}}}}}" or "{{{1|{{PAGENAME}}}}}".
  * Process interwiki links only if the link does not contain a virtual wiki
    or namespace.  Thus if a wiki has a namespace of "Test" and an interwiki
    of "Test", the link "Test:Topic" will parse as an internal link rather than
    an interwiki link.
  * Trim leading and trailing whitespace during parsing when a template is
    included to fix breakage of wiki table syntax such as "!{{Hl2}}| Word".
  * The {{SITENAME}} magic word was not fully implemented, and returned