@@ -20,6 +20,7 @@ import org.apache.commons.lang.StringUtils;
 import org.jamwiki.Environment;
 import org.jamwiki.parser.ParserException;
 import org.jamwiki.parser.ParserInput;
+import org.jamwiki.utils.LinkUtil;
 import org.jamwiki.utils.Utilities;
 import org.jamwiki.utils.WikiLogger;
 
@@ -106,46 +107,17 @@ public class HtmlLinkTag implements JFlexParserTag {
 	 *
 	 */
 	private String linkHtml(ParserInput parserInput, int mode, String link, String text, String punctuation) throws ParserException {
-		String html = null;
-		String linkLower = link.toLowerCase();
-		if (linkLower.startsWith("mailto://")) {
+		if (link.toLowerCase().startsWith("mailto://")) {
 			// fix bad mailto syntax
 			link = "mailto:" + link.substring("mailto://".length());
-		}
-		String protocol = "";
-		if (linkLower.startsWith("http://")) {
-			protocol = "http://";
-		} else if  (linkLower.startsWith("https://")) {
-			protocol = "https://";
-		} else if (linkLower.startsWith("ftp://")) {
-			protocol = "ftp://";
-		} else if (linkLower.startsWith("mailto:")) {
-			protocol = "mailto:";
-		} else if (linkLower.startsWith("news://")) {
-			protocol = "news://";
-		} else if (linkLower.startsWith("telnet://")) {
-			protocol = "telnet://";
-		} else if (linkLower.startsWith("file://")) {
-			protocol = "file://";
-		} else {
-			throw new ParserException("Invalid protocol in link " + link);
 		}
 		String caption = link;
 		if (!StringUtils.isBlank(text)) {
 			caption = JFlexParserUtil.parseFragment(parserInput, text, mode);
 		}
 		String title = Utilities.stripMarkup(caption);
-		link = link.substring(protocol.length());
-		// make sure link values are properly escaped.
-		link = StringUtils.replace(link, "<", "%3C");
-		link = StringUtils.replace(link, ">", "%3E");
-		link = StringUtils.replace(link, "\"", "%22");
-		link = StringUtils.replace(link, "\'", "%27");
-		String target = (Environment.getBooleanValue(Environment.PROP_EXTERNAL_LINK_NEW_WINDOW)) ? " target=\"_blank\"" : "";
-		html = "<a class=\"externallink\" rel=\"nofollow\" title=\""
-			 + title + "\" href=\"" + protocol + link + "\"" + target + ">"
-			 + caption + "</a>" + punctuation;
-		return html;
+		String openTag = LinkUtil.buildHtmlLinkOpenTag(link, "externallink", title);
+		return openTag + caption + "</a>" + punctuation;
 	}
 
 	/**
